* .study-planner__period-past-label margin fix when period is in collapsed state

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/study-planner.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/study-planner.scss
@@ -173,7 +173,7 @@
   font-size: 0.75rem;
   font-weight: 300;
   line-height: 1;
-  margin: 0 5px;
+  margin: 5px;
   padding: 4px;
 }
 
